fix z-index issue caused by block-appearing animation
also, improve popover padding for two reasons:

- make the popover more consistent with the Table tool popover (in future, it can be done with the same api method)
- make popover looks better

--- a/src/styles/block.css
+++ b/src/styles/block.css
@@ -9,7 +9,8 @@
 }
 
 .ce-block {
-  animation: fade-in 300ms ease forwards;
+  animation: fade-in 300ms ease;
+  animation-fill-mode: initial;
 
   &:first-of-type {
     margin-top: 0;
