--- a/src/styles/popover.css
+++ b/src/styles/popover.css
@@ -4,7 +4,7 @@
   will-change: opacity, transform;
   display: flex;
   flex-direction: column;
-  padding: 4px;
+  padding: 6px;
   min-width: 200px;
   overflow: hidden;
   box-sizing: border-box;
@@ -18,7 +18,7 @@
 
   &--opened {
      opacity: 1;
-     max-height: 284px;
+     max-height: 270px;
      animation: panelShowing 100ms ease;
 
      @media (--mobile) {
